--- a/package.json
+++ b/package.json
@@ -17,11 +17,21 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "10.4.16",
-    "firebase": "^10.10.0",
+    "firebase": "10.5.2",
     "next": "14.1.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.0"
+    "tailwindcss": "3.3.0",
+    "undici": "5.22.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^10.0.0"
   }
 }
