--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,20 @@
       ]
     }
   ],
+  "routes": [
+    { 
+      "src": "/api/generate-document",
+      "dest": "/api/generate-document",
+      "methods": ["POST"],
+      "continue": true
+    }
+  ],
+  "functions": {
+    "app/api/generate-document/route.ts": {
+      "memory": 1024,
+      "maxDuration": 60
+    }
+  },
   "env": {
     "NODE_ENV": "production"
   }
