--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jspdf": "^1.3.3",
     "autoprefixer": "10.4.16",
     "firebase": "10.5.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "next": "14.1.3",
     "postcss": "8.4.31",
     "react": "18.2.0",
